--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
      <h1>Welcome To My Programming Portfolio</h1
-This webpage contains the programming project I've worked on in my CSC 106 course at the University Of Rhode Island
+         <p> This webpage contains the programming project I've worked on in my CSC 106 course at the University Of Rhode Island
 
     </body>
 </html>
