--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <body>
       <img src= "csc106_banner.jpg">
      <h1>Welcome To My Programming Portfolio</h1
-     <p This webpage contains the programming project I've worked on in my CSC 106 course at the University Of Rhode Island </p>
+     <p This webpage contains the programming project I've worked on in my CSC 106 course at the University Of Rhode Island> </p>
 
     </body>
 </html>
