--- a/index.html
+++ b/index.html
@@ -6,7 +6,13 @@
     </head>
     <body>
       <img src= "csc106_banner.jpg">
-     <h1>Welcome To My Programming Portfolio</h1
+        <h1>Welcome To My Programming Portfolio</h1>
+        <table>
+            <tr>
+            </tr>
+            <tr>
+            </tr>
+        </table>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
     </body>
