--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
         <h1>Welcome To My Programming Portfolio</h1>
         <table>
             <tr>
-            </tr>
-            <tr>
+              <td>Home</td>
+              <td>Javascripts</td>
+              <td>About Me</td>
             </tr>
         </table>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
