--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <img src= "csc106_banner.jpg">
          <table>
             <tr>
-               <td>Home</td>
+               <td><img src= "home image.png"</td>
                <td>Javascripts</td>
                <td>About Me</td>
             </tr>
