--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
          <table>
             <tr>
                <td><img src= "home image.png"</td>
-               <td>Javascripts</td>
-               <td>About Me</td>
+               <td><img src= "javascript image.png"</td>
+               <td><img src= "about me image.png"</td>
             </tr>
         </table>
         <h1>Welcome To My Programming Portfolio</h1>
