--- a/about.html
+++ b/about.html
@@ -1,1 +1,20 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>About Me Page</title>
+    </head>
+    <body>
+      <img src= "csc106_banner.jpg">
+         <table>
+            <tr>
+               <td><img src= "home image.png"</td>
+               <td><img src= "javascript image.png"</td>
+               <td><img src= "about me image.png"</td>
+            </tr>
+        </table>
+        <h1>Who I am</h1>
+     <p> This webpage is about me</p>
+        
+    </body>
+</html>
