--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <img src= "csc106_banner.jpg">
          <table>
             <tr>
-               <td><img src= "home image.png"</td>
+                <a href=EasChen70.github.io/index.html><td><img src= "home image.png"</td></a>
                <td><img src= "javascript image.png"</td>
                <td><img src= "about me image.png"</td>
             </tr>
