--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <img src= "csc106_banner.jpg">
          <table>
             <tr>
-                <a href=EasChen70.github.io/index.html><td><img src= "home image.png"</td></a>
-               <td><img src= "javascript image.png"</td>
-               <td><img src= "about me image.png"</td>
+               <td><img src= "home image.png"</td> <a href=EasChen70.github.io/index.html></a>
+               <td><img src= "javascript image.png"</td> <a href=EasChen70.github.io/javascripts.html></a>
+               <td><img src= "about me image.png"</td> <a href=EasChen70.github.io/about.html></a>
             </tr>
         </table>
         <h1>Welcome To My Programming Portfolio</h1>
