--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <img src= "csc106_banner.jpg">
          <table>
             <tr>
-               <td><img src= "home image.png"</td> <a href=EasChen70.github.io/index.html></a> 
+               <td><img src= "home image.png"</td> <td><a href=EasChen70.github.io/index.html></a></td> 
                <td><img src= "javascript image.png"</td> <a href=EasChen70.github.io/javascripts.html></a>
                <td><img src= "about me image.png"</td> <a href=EasChen70.github.io/about.html></a>
             </tr>
