--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
         <title>Eason's Programming Portfolio</title>
     </head>
     <body>
-      <img src= "csc106_banner.jpg">
+      <img src= "csc106_banner.jpg"><br>
          <table>
             <tr>
-               <td><p><a href="EasChen70.github.io/index.html"><img src= "home image.png"</a></td>
-               <td><p><a href="EasChen70.github.io/javascripts.html"><img src= "javascript image.png"</a></td>
-               <td><p><a href="EasChen70.github.io/about.html"><img src= "about me image.png"</a><td>
+               <td><a href="EasChen70.github.io/index.html"><img src= "home image.png"</a></td>
+               <td><a href="EasChen70.github.io/javascripts.html"><img src= "javascript image.png"</a></td>
+               <td><a href="EasChen70.github.io/about.html"><img src= "about me image.png"</a><td>
             </tr>
         </table>
         <h1>Welcome To My Programming Portfolio</h1>
