--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
       <img src= "csc106_banner.jpg"><br>
          <table>
             <tr>
-               <td><a href="EasChen70.github.io/index.html"><img src= "home image.png"</a></td>
-               <td><a href="EasChen70.github.io/javascripts.html"><img src= "javascript image.png"</a></td>
-               <td><a href="EasChen70.github.io/about.html"><img src= "about me image.png"</a><td>
+               <td><a href="EasChen70.github.io"><img src= "home image.png"></a></td>
+               <td><a href="EasChen70.github.io/javascripts.html"><img src= "javascript image.png"></a></td>
+               <td><a href="EasChen70.github.io/about.html"><img src= "about me image.png"></a><td>
             </tr>
         </table>
         <h1>Welcome To My Programming Portfolio</h1>
