--- a/index.html
+++ b/index.html
@@ -6,13 +6,9 @@
     </head>
     <body>
       <img src= "csc106_banner.jpg"><br>
-         <table>
-            <tr>
-               <td><a href="EasChen70.github.io"><img src= "home image.png"></a></td>
-               <td><a href="EasChen70.github.io/javascripts.html"><img src= "javascript image.png"></a></td>
-               <td><a href="EasChen70.github.io/about.html"><img src= "about me image.png"></a><td>
-            </tr>
-        </table>
+               <a href="EasChen70.github.io/index.html"><img src= "home image.png"></a>
+               <a href="EasChen70.github.io/javascripts.html"><img src= "javascript image.png"></a>
+               <a href="EasChen70.github.io/about.html"><img src= "about me image.png"></a>
         <h1>Welcome To My Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
