--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <body>
       <img src= "csc106_banner.jpg"><br>
                <a href="EasChen70.github.io/index.html"><img src= "home image.png"></a>
-               <a href="EasChen70.github.io/javascripts.html"><img src= "javascript image.png"></a>
-               <a href="EasChen70.github.io/about.html"><img src= "about me image.png"></a>
+               <a href="https://easchen70.github.io/javascripts.html"><img src= "javascript image.png"></a>
+               <a href="https://easchen70.github.io/about"><img src= "about me image.png"></a>
         <h1>Welcome To My Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
