--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
         <title>Eason's Programming Portfolio</title>
     </head>
     <body>
-      <img src= "csc106_banner.jpg"><br>
-               <a href="EasChen70.github.io/index.html"><img src= "home image.png"></a>
-               <a href="https://easchen70.github.io/javascripts.html"><img src= "javascript image.png"></a>
-               <a href="https://easchen70.github.io/about"><img src= "about me image.png"></a>
+      <img src= "csc106_banner.jpg">
+         <table>
+            <tr>
+              <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td>
+              <td><p><a href=https://EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td>
+              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
+            </tr>
+        </table>
         <h1>Welcome To My Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
