--- a/javascripts.html
+++ b/javascripts.html
@@ -9,8 +9,8 @@
          <table>
             <tr>
               <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td>
-              <td><p><a href=EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td>
-              <td><p><a href=EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
+              <td><p><a href=https://EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td>
+              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
             </tr>
         </table>
         <h1>Welcome To My Javascript Programs</h1>
