--- a/about.html
+++ b/about.html
@@ -8,12 +8,12 @@
       <img src= "csc106_banner.jpg">
          <table>
             <tr>
-               <td><img src= "home image.png"</td>
-               <td><img src= "javascript image.png"</td>
-               <td><img src= "about me image.png"</td>
+              <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td>
+              <td><p><a href=https://EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td>
+              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
             </tr>
         </table>
-        <h1>Who I am</h1>
+        <h1>About Me</h1>
      <p> This webpage is about me</p>
         
     </body>
