--- a/about.html
+++ b/about.html
@@ -10,11 +10,12 @@
             <tr>
               <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td><br>
               <td><p><a href=https://EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td><br>
-              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
+              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td><br>
             </tr>
         </table>
         <h1>About Me</h1>
-     <p> This webpage is about me</p>
+     <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am Chinese-American, but identify more as an Asian-American
+           I enjoy working out and playing video games.</p>
         
     </body>
 </html>
