--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
             <tr>
               <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td><br>
               <td><p><a href=https://EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td><br>
-              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td><br>
+              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
             </tr>
         </table>
         <h1>About Me</h1>
