--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
               <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
             </tr>
         </table>
-        <h1>Welcome To My Programming Portfolio</h1>
+        <h1>Welcome To Eason's Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
     </body>
