--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             </tr>
         </table>
         <h1>About Me</h1>
-     <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am Chinese-American, but identify more as an Asian-American
+     <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am Asian-American
            I enjoy working out and playing video games.</p>
         
     </body>
