--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
             </tr>
         </table>
         <h1>About Me</h1>
-     <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am Asian-American
+     <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am a first generation college student.
            I enjoy working out and playing video games.</p>
         
     </body>
