--- a/javascripts.html
+++ b/javascripts.html
@@ -8,7 +8,7 @@
       <img src= "csc106_banner.jpg">
          <table>
             <tr>
-              <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td><br>
+              <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td>
               <td><p><a href=https://EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td><br>
               <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
             </tr>
