--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <tr>
               <td><p><a href="index.html"><img src= "home image.png"</a></td>
               <td><p><a href="javascripts.html"><img src= "javascript image.png"</a></td>
-              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
+              <td><p><a href="about.html"><img src= "about me image.png"</a></td>
             </tr>
         </table>
        <h1>Welcome To Eason's Programming Portfolio</h1>
