--- a/javascripts.html
+++ b/javascripts.html
@@ -5,12 +5,12 @@
         <title>Javascript</title>
     </head>
     <body>
-      <img src= "csc106_banner.jpg">
-         <table>
+        <img src= "csc106_banner.jpg">
+        <table>
             <tr>
-              <td><p><a href=EasChen70.github.io/index.html><img src= "home image.png"</a></td>
-              <td><p><a href=https://EasChen70.github.io/javascripts.html><img src= "javascript image.png"</a></td>
-              <td><p><a href=https://EasChen70.github.io/about.html><img src= "about me image.png"</a></td>
+              <td><p><a href="index.html"><img src= "home image.png"</a></td>
+              <td><p><a href="javascripts.html"><img src= "javascript image.png"</a></td>
+              <td><p><a href="about.html"><img src= "about me image.png"</a></td>
             </tr>
         </table>
         <h1>Welcome To Eason's Javascript Programs</h1>
