--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
         <meta charset="utf-8">
         <title>Eason's Programming Portfolio</title>
     </head>
-            <img src= "csc106_banner.jpg">
+    <body>
+        <img src= "csc106_banner.jpg">
         <table>
             <tr>
               <td><p><a href="index.html"><img src= "home image.png"</a></td>
@@ -12,8 +13,7 @@
               <td><p><a href="about.html"><img src= "about me image.png"</a></td>
             </tr>
         </table>
-    <body>
-       <h1>Welcome To Eason's Programming Portfolio</h1>
+       <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
     </body>
