--- a/javascripts.html
+++ b/javascripts.html
@@ -13,7 +13,7 @@
               <td><p><a href="about.html"><img src= "about me image.png"</a></td>
             </tr>
         </table>
-        <h1>Welcome To Eason's Javascript Programs</h1>
+        <h1 style="margin-top: -20px ">Welcome To Eason's Javascript Programs</h1>
      <p> This webpage contains my javascript programs I've created in my CSC106 class</p>
         
     </body>
