--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
               <td><p><a href="about.html"><img src= "about me image.png"</a></td>
             </tr>
         </table>
-        <h1>About Me</h1>
+        <h1 style="margin-top: -20px ">About Me</h1>
      <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am a first generation college student.
            I enjoy working out and playing video games.</p>
         
