--- a/javascripts.html
+++ b/javascripts.html
@@ -8,9 +8,9 @@
         <img src= "csc106_banner.jpg">
         <table>
             <tr>
-              <td><p><a href="index.html"><img src= "home image.png"</a></td>
-              <td><p><a href="javascripts.html"><img src= "javascript image.png"</a></td>
-              <td><p><a href="about.html"><img src= "about me image.png"</a></td>
+              <td><p><a href="index.html"><img src= "home.png"</a></td>
+              <td><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
+              <td><p><a href="about.html"><img src= "About.png"</a></td>
             </tr>
         </table>
         <h1 style="margin-top: -20px ">Welcome To Eason's Javascript Programs</h1>
