--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Eason's Programming Portfolio</title>
     </head>
     <body>
-        <img src= "csc106_banner.jpg">
+        <img src= "myBanner.jpg">
         <table>
             <tr>
               <td><p><a href="index.html"><img src= "home.png"</a></td>
