--- a/javascripts.html
+++ b/javascripts.html
@@ -5,7 +5,7 @@
         <title>Javascript</title>
     </head>
     <body>
-        <img src= "csc106_banner.jpg">
+        <img src= "myBanner.jpg">
         <table>
             <tr>
               <td><p><a href="index.html"><img src= "home.png"</a></td>
