--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <title>About Me Page</title>
     </head>
     <body>
-        <img src= "csc106_banner.jpg">
+        <img src= "myBanner.jpg">
         <table>
             <tr>
               <td><p><a href="index.html"><img src= "home.png"</a></td>
