--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
         <title>Eason's Programming Portfolio</title>
     </head>
     <body>
-        <img src= "myBanner.jpg">
+        <img src= "myBanner.jpg" class="center">
         <table>
             <tr>
               <td><p><a href="index.html"><img src= "home.png"</a></td>
               <td><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
               <td><p><a href="about.html"><img src= "About.png"</a></td>
+              <td><p><a href="apps.html"><img src= "apps.png"</a><td>  
             </tr>
         </table>
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
