--- a/javascripts.html
+++ b/javascripts.html
@@ -3,14 +3,16 @@
     <head>
         <meta charset="utf-8">
         <title>Javascript</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
         <img src= "myBanner.jpg">
-        <table>
+        <table id="nav-table">
             <tr>
-              <td><p><a href="index.html"><img src= "home.png"</a></td>
-              <td><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
-              <td><p><a href="about.html"><img src= "About.png"</a></td>
+              <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
+              <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
+              <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
+              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>  
             </tr>
         </table>
         <h1 style="margin-top: -20px ">Welcome To Eason's Javascript Programs</h1>
