--- a/about.html
+++ b/about.html
@@ -4,13 +4,19 @@
         <meta charset="utf-8">
         <title>About Me Page</title>
     </head>
-    <body>
+    <body>          
+        <style>
+           
+            body {
+                background-image: url('mybBackground.jpg");
+        </style>
         <img src= "myBanner.jpg">
         <table>
             <tr>
               <td><p><a href="index.html"><img src= "home.png"</a></td>
               <td><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
               <td><p><a href="about.html"><img src= "About.png"</a></td>
+              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>  
             </tr>
         </table>
         <h1 style="margin-top: -20px ">About Me</h1>
