--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
         <style>
            
             body {
-                background-image: url('mybBackground.jpg");
+                background-image: url('mybackground.jpg");
         </style>
         <img src= "myBanner.jpg">
         <table>
