--- a/about.html
+++ b/about.html
@@ -6,10 +6,7 @@
     </head>
     <body>          
         <style>
-           
-            body {
-                background-image: url('mybackground.jpg");
-                    }
+            body {background-image: url('mybackground.jpg");}
         </style>
         <img src= "myBanner.jpg">
         <table>
