--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>About Me Page</title>
          <style>
-            body {background-image: url('mybackground.jpg");}
+            body {background-image: url("mybackground.jpg");}
         </style>
     </head>
     <body>          
