--- a/about.html
+++ b/about.html
@@ -4,7 +4,9 @@
         <meta charset="utf-8">
         <title>About Me Page</title>
          <style>
-            body {background-image: url("mybackground.jpg");}
+            body {background-image: url("mybackground.jpg");
+                  background-repeat: no-repeat;}
+             
         </style>
     </head>
     <body>          
