--- a/about.html
+++ b/about.html
@@ -5,7 +5,9 @@
         <title>About Me Page</title>
          <style>
             body {background-image: url("mybackground.jpg");
-                  background-repeat: no-repeat;}
+                  background-repeat: no-repeat;
+                  background-attachment: fixed;
+                  background=size: cover;}
              
         </style>
     </head>
