--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
                   background-attachment: fixed;
                   background-size: cover;}
              p { color: #EBEDEE;}
-              
+             h1 { color: #EBEDEE;} 
         </style>
     </head>
     <body>          
