--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
                   background-repeat: no-repeat;
                   background-attachment: fixed;
                   background-size: cover;}
-             h1 { color: #EBEDEE;} 
+             h1 { color: #ABC7CE;} 
              p { color: #EBEDEE;}
         </style>
     </head>
