--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <img src= "myBanner.jpg">
+        <img src= "myBanner.jpg" class="banner">
         <table id="nav-table">
             <tr>
               <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
