--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
         <meta charset="utf-8">
         <title>Eason's Programming Portfolio</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
+        <style>
+            .banner {
+   display:block;
+   margi-left: auto;
+   margin right: auto;
+ }
+        </style>
     </head>
     <body>
         <img class="banner" src= "myBanner.jpg">
