--- a/index.html
+++ b/index.html
@@ -4,16 +4,9 @@
         <meta charset="utf-8">
         <title>Eason's Programming Portfolio</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
-        <style>
-            .banner {
-   display:block;
-   margi-left: auto;
-   margin right: auto;
- }
-        </style>
     </head>
     <body>
-        <img class="banner" src= "myBanner.jpg">
+        <p align="center"><img src= "myBanner.jpg"></p>
         <table id="nav-table">
             <tr>
               <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
