--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     </head>
     <body>
         <p align="center"><img src= "myBanner.jpg"></p>
-       <p align="center"><table id="nav-table">
-            <tr>
+        <table id="nav-table">
+            <p align="center"><tr>
               <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
               <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
               <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
