--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <body>
         <p align="center"><img src= "myBanner.jpg"></p>
         <table id="nav-table">
-            <p align="center"><tr>
-              <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
-              <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
-              <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
-              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>  
+            <tr>
+              <p align="center"><td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td></p>
+              <p align="center"><td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td></p>
+              <p align="center"><td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td></p>
+              <p align="center"><td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td></p>  
             </tr>
-        </table></p>
+        </table>
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
