--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <p align="center"><img src= "myBanner.jpg"></p>
         <table id="nav-table">
             <tr>
-              <p align="center"><td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td></p>
-              <p align="center"><td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td></p>
-              <p align="center"><td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td></p>
-              <p align="center"><td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td></p>  
+              <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
+              <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
+              <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
+              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
             </tr>
         </table>
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
