--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <body>
         <p align="center"><img src= "myBanner.jpg"></p>
         <table id="nav-table">
+            <table class="center">
             <tr>
               <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
               <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
