--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
         <title>Eason's Programming Portfolio</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
-    <body>
+   <p align="center"> <body>
         <p align="center"><img src= "myBanner.jpg"></p>
-        <table class="center">
+        <table id="nav-table">
             <tr>
               <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
               <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
@@ -18,5 +18,5 @@
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
-    </body>
+            </body></p>
 </html>
