--- a/index.html
+++ b/index.html
@@ -5,19 +5,19 @@
         <title>Eason's Programming Portfolio</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
-   <p align="center"><body>
+     <body>
         <p align="center"><img src= "myBanner.jpg"></p>
         <table id="nav-table">
             <tr>
-              <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
-              <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
-              <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
-              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
+              <p align="center"><td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td></p>
+              <p align="center"><td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td></p>
+              <p align="center"><td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td></p>
+              <p align="center"><td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td></p>
             </tr>
         </table>
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
-            </body></p>
+            </body>
 </html>
 ,
