--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
         <title>Eason's Programming Portfolio</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
+   
      <body>
         <p align="center"><img src= "myBanner.jpg"></p>
-        <table id="nav-table">
+        <center> <table id="nav-table">
             <tr>
-              <p align="center"><td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td></p>
-              <p align="center"><td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td></p>
-              <p align="center"><td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td></p>
-              <p align="center"><td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td></p>
+              <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
+              <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
+              <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
+              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
             </tr>
-        </table>
+        </table> </center>
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
      <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
         
