--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
               <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
               <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
             </tr>
-        </table> </center>
+        </table> 
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
-     <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p>
+     <p> This webpage contains the programming projects I've worked on in my CSC 106 class at the University Of Rhode Island</p> </center>
         
             </body>
 </html>
