--- a/javascripts.html
+++ b/javascripts.html
@@ -6,17 +6,17 @@
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
     <body>
-        <img src= "myBanner.jpg">
-        <table id="nav-table">
+        <p align="center"><img src= "myBanner.jpg"></p>
+        <center> <table id="nav-table">
             <tr>
               <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
               <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
               <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
-              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>  
+              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
             </tr>
-        </table>
+        </table> 
         <h1 style="margin-top: -20px ">Welcome To Eason's Javascript Programs</h1>
-     <p> This webpage contains my javascript programs I've created in my CSC106 class</p>
+        <p> This webpage contains my javascript programs I've created in my CSC106 class</p> </center>
         
     </body>
 </html>
