--- a/apps.html
+++ b/apps.html
@@ -5,17 +5,17 @@
         <title>Eason's Programming Portfolio</title>
     </head>
     <body>
-        <img src= "myBanner.jpg" class="center">
-        <table>
+        <p align="center"><img src= "myBanner.jpg"></p>
+        <center> <table id="nav-table">
             <tr>
-              <td><p><a href="index.html"><img src= "home.png"</a></td>
-              <td><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
-              <td><p><a href="about.html"><img src= "About.png"</a></td>
-              <td><p><a href="apps.html"><img src= "apps.png"</a><td>  
+              <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
+              <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
+              <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
+              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
             </tr>
-        </table>
+        </table> 
        <h1 style="margin-top: -20px ">Welcome To Eason's Apps</h1>
-     <p> Nothing yet</p>
+       <p> Nothing yet</p> </center>
         
     </body>
 </html>
