--- a/apps.html
+++ b/apps.html
@@ -3,8 +3,9 @@
     <head>
         <meta charset="utf-8">
         <title>Eason's Programming Portfolio</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
     </head>
-    <body>
+     <body>
         <p align="center"><img src= "myBanner.jpg"></p>
         <center> <table id="nav-table">
             <tr>
