--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
         </style>
     </head>
     <body>          
-        <img src= "myBanner.jpg">
+        <center><img src= "myBanner.jpg">
         <table>
             <tr>
               <td><p><a href="index.html"><img src= "home.png"</a></td>
@@ -24,6 +24,6 @@
         </table>
         <h1 style="margin-top: -20px ">About Me</h1>
      <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am a first generation college student.
-           I enjoy working out and playing video games.</p>
+         I enjoy working out and playing video games.</p> </center>
     </body>
 </html>
