--- a/about.html
+++ b/about.html
@@ -13,15 +13,15 @@
         </style>
     </head>
     <body>          
-        <center><img src= "myBanner.jpg">
-        <table>
+        <p align="center"><img src= "myBanner.jpg"></p>
+        <center> <table id="nav-table">
             <tr>
-              <td><p><a href="index.html"><img src= "home.png"</a></td>
-              <td><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
-              <td><p><a href="about.html"><img src= "About.png"</a></td>
-              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>  
+              <td id="nav-td"><p><a href="index.html"><img src= "home.png"</a></td>
+              <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
+              <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
+              <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
             </tr>
-        </table>
+        </table> 
         <h1 style="margin-top: -20px ">About Me</h1>
      <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am a first generation college student.
          I enjoy working out and playing video games.</p> </center>
