--- a/about.html
+++ b/about.html
@@ -3,6 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>About Me Page</title>
+        <link rel="stylesheet" type="text/css" href="stylesheet.css">
          <style>
             body {background-image: url("mybackground.jpg");
                   background-repeat: no-repeat;
