--- a/about.html
+++ b/about.html
@@ -24,7 +24,12 @@
             </tr>
         </table> 
         <h1 style="margin-top: -20px ">About Me</h1>
-     <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am a first generation college student.
-         I enjoy working out and playing video games.</p> </center>
+     <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am a first generation college student. </p> </center>
+            <h2> Hobbies and passions </h4>
+            <ul>
+                <li> Lifting/bodybuilding
+                <li> Video games/hanging out with friends
+                <li> Problem solving
+            </ul>   
     </body>
 </html>
