--- a/about.html
+++ b/about.html
@@ -11,6 +11,7 @@
                   background-size: cover;}
              h1 { color: #ABC7CE;} 
              p { color: #EBEDEE;}
+             h2 { color: #ABC7CE;} 
         </style>
     </head>
     <body>          
