--- a/about.html
+++ b/about.html
@@ -12,6 +12,7 @@
              h1 { color: #ABC7CE;} 
              p { color: #EBEDEE;}
              h2 { color: #ABC7CE;} 
+             ul { color: #EBEDEE;}
         </style>
     </head>
     <body>          
