--- a/about.html
+++ b/about.html
@@ -32,6 +32,9 @@
                 <li> Lifting/bodybuilding
                 <li> Video games/hanging out with friends
                 <li> Problem solving
+                <li> Lacrosse    
             </ul>   
+              <img src= "bodybuildpic.JPG">    
+              <img src=  "lacrossepic.jpg">    
     </body>
 </html>
