--- a/about.html
+++ b/about.html
@@ -35,6 +35,6 @@
                 <li> Lacrosse    
             </ul>   
               <img src= "bodybuildpic.JPG">    
-              <img src=  "lacrossepic.jpg">    
+              <img src=  "lacrossepic.JPG">    
     </body>
 </html>
