--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                 <li> Problem solving
                 <li> Lacrosse    
             </ul>   
-              <img src= "bodybuildpic.JPG" height=150px>    
-              <img src= "lacrossepic.JPG" width="30%">    
+              <img src= "bodybuildpic.JPG" height=180px>    
+              <img src= "lacrossepic (2).JPG" width="30%">    
     </body>
 </html>
