--- a/about.html
+++ b/about.html
@@ -35,6 +35,6 @@
                 <li> Lacrosse    
             </ul>   
               <img src= "bodybuildpic.JPG" height=180px>    
-              <img src= "lacrossepic (2).JPG" width="30%">    
+              <img src= "Lax.JPG" width="30%">    
     </body>
 </html>
