--- a/about.html
+++ b/about.html
@@ -35,6 +35,6 @@
                 <li> Lacrosse    
             </ul>   
               <img src= "bodybuildpic.JPG" height=180px>    
-              <img src= "Lax.JPG">    
+              <img src= Laxpic.JPG>    
     </body>
 </html>
