--- a/about.html
+++ b/about.html
@@ -13,6 +13,9 @@
              p { color: #EBEDEE;}
              h2 { color: #ABC7CE;} 
              ul { color: #EBEDEE;}
+             #robocop { margin-left: 200px;}
+             #bodybuild {float:right;}
+             #lacrosse {float:right;}
         </style>
     </head>
     <body>          
@@ -27,14 +30,16 @@
         </table> 
         <h1 style="margin-top: -20px ">About Me</h1>
      <p> Hi, my name is Eason Chen and I am currently a computer science student at the University Of Rhode Island. I am a first generation college student. </p> </center>
-            <h2> Hobbies and passions </h2>
+<div id="robocop">          
+  <h2> Hobbies and passions </h2>
             <ul>
                 <li> Lifting/bodybuilding
                 <li> Video games/hanging out with friends
                 <li> Problem solving
                 <li> Lacrosse    
             </ul>   
-              <img src= "bodybuildpic.JPG" height=180px>    
-              <img src= "Laxpic.JPG" height=180px>    
+              <img id="bodybuild" src= "bodybuildpic.JPG" height=180px>    
+              <img id="lacrosse" src= "Laxpic.JPG" height=180px>  
+                  </div>   
     </body>
 </html>
