--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
                   background-attachment: fixed;
                   background-size: cover;}
              h1 { color: #ABC7CE;} 
-             p { color: #EBEDEE;}
+             p { color: #607175;}
              h2 { color: #ABC7CE;} 
              ul { color: #EBEDEE;}
              #robocop { margin-left: 200px;}
@@ -38,9 +38,9 @@
                 <li> Problem solving
                 <li> Lacrosse    
             </ul>   
-              <img id="bodybuild" src= "bodybuildpic.JPG" height=180px>    
-              <img id="lacrosse" src= "Laxpic.JPG" height=180px>  
+              <img id="bodybuild" src= "bodybuildpic.JPG" height=80px>    
+              <img id="lacrosse" src= "Laxpic.JPG" height=80px>  
                   </div>   
     </body>
 </html>
-j
+
