--- a/about.html
+++ b/about.html
@@ -13,9 +13,11 @@
              p { color: #607175;}
              h2 { color: #ABC7CE;} 
              ul { color: #EBEDEE;}
-             #robocop { margin-left: 85px;}
-             #bodybuild {float:right;}
-             #lacrosse {float:right;}
+             #robocop { margin-left: 185px;}
+             #bodybuild {float:right;
+                         margin-right: 20px;}
+             #lacrosse {float:right;
+                        margin-right: 20px;}
         </style>
     </head>
     <body>          
