--- a/about.html
+++ b/about.html
@@ -14,10 +14,12 @@
              h2 { color: #ABC7CE;} 
              ul { color: #EBEDEE;}
              #robocop { margin-left: 185px;}
-             #bodybuild {float:right;
-                         margin-right: 20px;}
-             #lacrosse {float:right;
-                        margin-right: 20px;}
+             #bodybuild {float:left;
+                         width: 30%;
+                         margin-left: 50px;}
+             #lacrosse {float:left;
+                        width: 30%;
+                        margin-left: 50px;}
         </style>
     </head>
     <body>          
