--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
                   background-attachment: fixed;
                   background-size: cover;}
              h1 { color: #ABC7CE;} 
-             p { color: #607175;}
+             p { color: #E7EEF0;}
              h2 { color: #ABC7CE;} 
              ul { color: #EBEDEE;}
              #robocop { margin-left: 185px;}
