--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
         <title>About Me Page</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
          <style>
-            body {background-image: url("mybackground.jpg");
+            body {background-image: url("backgroundnew.jpg");
                   background-repeat: no-repeat;
                   background-attachment: fixed;
                   background-size: cover;}
