--- a/javascripts.html
+++ b/javascripts.html
@@ -17,8 +17,8 @@
         </table> 
         <h1 style="margin-top: -20px ">Welcome To Eason's Javascript Programs</h1>
         <p> This webpage contains my javascript programs I've created in my CSC106 class</p> </center>
-        <h2 style="margin-left: 300px "><a href="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184">Chen_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184/embed.js?editor=no&buttons=no&author=no&embed=yes" height=33%></script>
-        <h3 style="margin-left: 300px "><a href="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384">Chen_dancing_bitmoji</a></h3><script src="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384/embed.js?editor=no&buttons=no&author=no&embed=yes" height=33%></script>        
-        <h4 style="margin-left: 300px "><a href="https://www.khanacademy.org/computer-programming/chen_racing_bitmoji/5357079271358464">Chen_racing_bitmoji</a></h4><script src="https://www.khanacademy.org/computer-programming/chen_racing_bitmoji/5357079271358464/embed.js?editor=no&buttons=no&author=no&embed=yes" height=33%></script>
+        <h2 style="margin-left: 300px "><a href="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184">Chen_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
+        <h2 style="margin-left: 300px "><a href="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384">Chen_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>        
+        <h2 style="margin-left: 300px "><a href="https://www.khanacademy.org/computer-programming/chen_racing_bitmoji/5357079271358464">Chen_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_racing_bitmoji/5357079271358464/embed.js?editor=no&buttons=no&author=no&embed=yes"></script>
   </body>
 </html>
