--- a/javascripts.html
+++ b/javascripts.html
@@ -17,7 +17,7 @@
         </table> 
         <h1 style="margin-top: -20px ">Welcome To Eason's Javascript Programs</h1>
         <p> This webpage contains my javascript programs I've created in my CSC106 class</p> </center>
-        <table "margin-left: 75px">
+        <center> <table>
         <tr>    
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184">Chen_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384">Chen_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>      
