--- a/javascripts.html
+++ b/javascripts.html
@@ -19,9 +19,9 @@
         <p> This webpage contains my javascript programs I've created in my CSC106 class</p> </center>
         <center> <table>
         <tr>    
-        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184">Chen_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_bitmoji/4768361225437184/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384">Chen_dancing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_dancing_bitmoji/4777122287632384/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>      
-        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_racing_bitmoji/5357079271358464">Chen_racing_bitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_racing_bitmoji/5357079271358464/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_dancing_bitmojifun/6619495443513344">Chen_dancing_bitmojifun</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_dancing_bitmojifun/6619495443513344/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></td>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_racing_bitmojifun/5222177829863424">Chen_racing_bitmojifun</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_racing_bitmojifun/5222177829863424/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></td>      
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_resizebitmoji/6030125787299840">Chen_resizebitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_resizebitmoji/6030125787299840/embed.js?editor=yes&buttons=yes&author=yes&embed=yes"></script></td>
         </tr>
        </table>
   </body>
