--- a/javascripts.html
+++ b/javascripts.html
@@ -24,5 +24,11 @@
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_resizebitmoji/6030125787299840">Chen_resizebitmoji</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_resizebitmoji/6030125787299840/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>
        </table>
+        <center> <table>
+        <tr>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_decision/4535906509832192">Chen_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_decision/4535906509832192/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_follow/5430297411764224">Chen_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_follow/5430297411764224/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        </tr>    
+       </table>    
   </body>
 </html>
