--- a/javascripts.html
+++ b/javascripts.html
@@ -28,7 +28,8 @@
         <tr>
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_decision/4535906509832192">Chen_decision</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_decision/4535906509832192/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_follow/5430297411764224">Chen_follow</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_follow/5430297411764224/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
-        </tr>    
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_zoo/5182655268175872">Chen_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_zoo/5182655268175872/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+         </tr>    
        </table>    
   </body>
 </html>
