--- a/javascripts.html
+++ b/javascripts.html
@@ -31,5 +31,10 @@
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_zoo/5182655268175872">Chen_zoo</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_zoo/5182655268175872/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
          </tr>    
        </table>    
+         <center> <table>
+        <tr>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_tag/6062910174445568">Chen_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_tag/6062910174445568/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+         </tr>    
+       </table>    
   </body>
 </html>
