--- a/javascripts.html
+++ b/javascripts.html
@@ -34,6 +34,7 @@
          <center> <table>
         <tr>
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_tag/6062910174445568">Chen_tag</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_tag/6062910174445568/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_contacts/5591565691043840">Chen_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_contacts/5591565691043840/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
          </tr>    
        </table>    
   </body>
