--- a/javascripts.html
+++ b/javascripts.html
@@ -37,6 +37,9 @@
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_contacts/5591565691043840">Chen_contacts</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_contacts/5591565691043840/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_numbertracer/6408975964749824">Chen_numbertracer</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_numbertracer/6408975964749824/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
         </tr>    
-       </table>    
+       </table>  
+        <center> <table>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_frogger/5866888049508352">Chen_frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_frogger/5866888049508352/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+       </table>
   </body>
 </html>
