--- a/javascripts.html
+++ b/javascripts.html
@@ -40,6 +40,7 @@
        </table>  
         <center> <table>
         <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_frogger/5866888049508352">Chen_frogger</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_frogger/5866888049508352/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/chen_memory/5161339884453888">Chen_memory</a></h2><script src="https://www.khanacademy.org/computer-programming/chen_memory/5161339884453888/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>
        </table>
   </body>
 </html>
