Update and rename Final to Final.html

--- a/Final.html
+++ b/Final.html
@@ -17,7 +17,11 @@
         </table> 
        <h1 style="margin-top: -20px ">Welcome To My Final Project</h1>
      <p> This is my final project I worked on with Anya Detonnancourty, We created a version of Asteroid for our final project. To play, read the instructions on the unique shooting feature, and movement of the ship. Survive the incoming wave of asteroids to win! </p> </center>    
-  
+    <center> <table>
+        <tr>    
+        <td><h2><a href="https://www.khanacademy.org/computer-programming/spin-off-of-rocket-star-final/5611713359560704">Spin-off of "Rocket star final"</a></h2><script src="https://www.khanacademy.org/computer-programming/spin-off-of-rocket-star-final/5611713359560704/embed.js?editor=no&buttons=no&author=no&embed=yes"></script></td>    
+        </tr>
+       </table>
   
   
   
