--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
               <td id="nav-td"><p><a href="javascripts.html"><img src= "javascripts.png"</a></td>
               <td id="nav-td"><p><a href="about.html"><img src= "About.png"</a></td>
               <td id="nav-td"><p><a href="apps.html"><img src= "apps.png"</a><td>
+              <td id="nav-td"><p><a href="Final.html"><img src= "Final.png"</a><td>
             </tr>
         </table> 
        <h1 style="margin-top: -20px ">Welcome To Eason's Programming Portfolio</h1>
